<resources>
    <string name="app_name">Fan</string>
    <string name="app_version">version 1.1</string>

    <!-- Strings related to MainActivity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="fragment_title_my_shows">My Shows</string>
    <string name="fragment_title_now_showing">Now Showing</string>
    <string name="fragment_title_tv_guide">TV Guide</string>

    <string name="snackbar_not_refreshed">Guide not refreshed today</string>
    <string name="snackbar_refresh_now">Refresh Now</string>
    <string name="snackbar_refreshing">Refreshing…</string>
    <string name="snackbar_refresh_complete">Refresh complete!</string>
    <string name="snackbar_dismiss">Dismiss</string>
    <string name="snackbar_no_internet">No Internet connection</string>
    <string name="snackbar_retry">Retry</string>

    <string name="no_shows_found">No shows found</string>

    <!-- Strings related to ShowDetailsActivity -->
    <string name="not_applicable">N/A</string>
    <string name="no_details">No details found</string>

    <string name="show_details_cast">Cast:</string>
    <string name="show_details_voices_of">Voices of:</string>
    <string name="show_details_judges">Judges:</string>
    <string name="show_details_hosted_by">Hosted by:</string>
    <string name="show_details_description">Description:</string>
    <string name="show_details_release">Release Date:</string>
    <string name="show_details_director">Directed By:</string>
    <string name="show_details_producer">Produced By:</string>
    <string name="show_details_writer">Written By:</string>
    <string name="show_details_music_director">Music Director:</string>

    <string name="alert_dialog_trivia">Trivia</string>
    <string name="alert_dialog_close">Close</string>
    <string name="toast_no_trivia">No trivia found!</string>

    <!-- Strings related to Settings -->
    <string name="activity_title_settings">Settings</string>

    <string name="pref_category_favorites">Favorites</string>
    <string name="fav_actors_title">Favorite actors</string>
    <string name="fav_actors_summary">List of your favorite actors</string>
    <string name="fav_actors_default">Shah Rukh Khan\nShahrukh Khan\nKatrina Kaif</string>
    <string name="fav_shows_title">Favorite shows</string>
    <string name="fav_shows_summary">List of your favorite movies or TV shows</string>
    <string name="fav_shows_default">Friends\nSuits\nWelcome\nThe Dark Knight</string>

    <string name="pref_category_shows_listing">Shows listing</string>
    <string name="hide_extras_title">Hide extras</string>
    <string name="hide_extras_on">Shows like Teleshopping, Infomercials, etc. will not be listed</string>
    <string name="hide_extras_off">Shows like Teleshopping, Infomercials, etc. will also be listed</string>
    <string name="combine_episodes_title">Combine episodes</string>
    <string name="combine_episodes_on">Continuous episodes of the same show will be combined as one</string>
    <string name="combine_episodes_off">Continuous episodes of the same show will be listed separately</string>

    <string name="pref_category_refresh">Refresh</string>
    <string name="next_day_refresh_title">Next day refresh</string>
    <string name="next_day_refresh_on">TV guide will also be refreshed for the next day</string>
    <string name="next_day_refresh_off">TV guide will not be refreshed for the next day</string>
    <string name="auto_refresh_title">Auto refresh</string>
    <string name="auto_refresh_summary">Automatically refresh the TV guide daily</string>

    <!-- Strings related to notification -->
    <string name="notif_title">Shows for today:</string>
    <string name="notif_no_shows">Sorry! No shows found.</string>
</resources>
