<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_show_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.psyclone.fan.activities.ShowDetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:id="@+id/iv_show_details_poster"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_marginEnd="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_show_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/textPrimary" />

                <RatingBar
                    android:id="@+id/rb_show_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style = "?android:attr/ratingBarStyleSmall"
                    android:numStars="5"
                    android:stepSize="0.05"
                    android:rating="2.8"
                    android:isIndicator="true" />

                <TextView
                    android:id="@+id/tv_channel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:id="@+id/lv_show_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:paddingStart="8dp">
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:padding="@dimen/activity_horizontal_margin"
            android:elevation="2dp">

            <TextView
                android:id="@+id/label_show_details_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_details_cast"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_show_details_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/no_details" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_details_description"
                android:textSize="18sp"
                android:textColor="@color/textPrimary" />
            <TextView
                android:id="@+id/tv_show_details_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_details" />

            <TextView
                android:id="@+id/label_show_details_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/show_details_release"
                android:textSize="18sp"
                android:textColor="@color/textPrimary" />
            <TextView
                android:id="@+id/tv_show_details_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_details" />

            <TextView
                android:id="@+id/label_show_details_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/show_details_director"
                android:textSize="18sp"
                android:textColor="@color/textPrimary" />
            <TextView
                android:id="@+id/tv_show_details_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_details" />

            <TextView
                android:id="@+id/label_show_details_producer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/show_details_producer"
                android:textSize="18sp"
                android:textColor="@color/textPrimary" />
            <TextView
                android:id="@+id/tv_show_details_producer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_details" />

            <TextView
                android:id="@+id/label_show_details_writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/show_details_writer"
                android:textSize="18sp"
                android:textColor="@color/textPrimary" />
            <TextView
                android:id="@+id/tv_show_details_writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_details" />

            <TextView
                android:id="@+id/label_show_details_music_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/show_details_music_director"
                android:textSize="18sp"
                android:textColor="@color/textPrimary" />
            <TextView
                android:id="@+id/tv_show_details_music_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_details" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>